# entropy

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
resources/colormaps/matplotlib/: inferno.csv  magma.csv  plasma.csv  viridis.csv
resources/colormaps/ncl/: cividis.csv
resources/colormaps/peter_kovesi/: CET-L05.csv  CET-L07.csv  CET-L08.csv  CET-L09.csv  README.txt
src/: EntropyApp.cpp  EntropyApp.h  defines.h.in  main.cpp  test.h
src/common/: AABB.h  AsyncTasks.h  CoordinateFrame.cpp  CoordinateFrame.h  DataHelper.cpp  DataHelper.h  DirectionMaps.cpp  DirectionMaps.h  Exception.hpp  GraphCutsTypes.h  HistogramSettings.h  InputParams.cpp  InputParams.h  InputParser.cpp  InputParser.h  MathFuncs.cpp  MathFuncs.h  ParcellationLabelTable.cpp  ParcellationLabelTable.h  PublicTypes.h  RangeTypes.h  SegmentationTypes.h  Types.cpp  Types.h  UuidRange.h  UuidUtility.cpp  UuidUtility.h  Viewport.cpp  Viewport.h  filesystem.h
src/image/: Image.cpp  Image.h  ImageCastHelper.tpp  ImageColorMap.cpp  ImageColorMap.h  ImageHeader.cpp  ImageHeader.h  ImageHeaderOverrides.h  ImageIoInfo.cpp  ImageIoInfo.h  ImageSettings.cpp  ImageSettings.h  ImageTransformations.cpp  ImageTransformations.h  ImageUtility.cpp  ImageUtility.h  ImageUtility.tpp  Isosurface.h  SegUtil.cpp  SegUtil.h  SurfaceUtility.cpp  SurfaceUtility.h
src/logic/annotation/: AnnotPolygon.tpp  Annotation.cpp  Annotation.h  AnnotationHelper.cpp  AnnotationHelper.h  BezierHelper.cpp  BezierHelper.h  LandmarkGroup.cpp  LandmarkGroup.h  PointList.h  PointRecord.h  SerializeAnnot.cpp  SerializeAnnot.h
src/logic/app/: CallbackHandler.cpp  CallbackHandler.h  Data.cpp  Data.h  Logging.cpp  Logging.h  Settings.cpp  Settings.h  State.cpp  State.h
src/logic/camera/: Camera.cpp  Camera.h  CameraHelpers.cpp  CameraHelpers.h  CameraStartFrameType.h  CameraTypes.cpp  CameraTypes.h  MathUtility.cpp  MathUtility.h  OrthogonalProjection.cpp  OrthogonalProjection.h  PerspectiveProjection.cpp  PerspectiveProjection.h  Projection.cpp  Projection.h
src/logic/interaction/: ViewHit.cpp  ViewHit.h
src/logic/records/: MeshRecord.h  RenderableRecord.h
src/logic/segmentation/: GraphCuts.cpp  GraphCuts.h  GridCutsWrappers.h  Poisson.cpp  Poisson.h  SegHelpers.cpp  SegHelpers.h  SegHelpers.tpp
src/logic/serialization/: JsonSerializers.h  ProjectSerialization.cpp  ProjectSerialization.h
src/logic/states/: AnnotationEvents.h  AnnotationStateHelpers.cpp  AnnotationStateHelpers.h  AnnotationStateMachine.cpp  AnnotationStateMachine.h  AnnotationStates.cpp  AnnotationStates.h  FsmList.hpp
src/logic_old/: AppController.cpp  AppController.h  AppInitializer.cpp  CrosshairsType.h  RenderableRecord.h  TransformationState.h
src/logic_old/annotation/: AnnotationHelper.cpp  AnnotationHelper.h  LandmarkGroupCpuRecord.cpp  LandmarkGroupCpuRecord.h  PlanarPolygon.cpp  PlanarPolygon.h  Polygon.cpp  Polygon.h  SlideAnnotationCpuRecord.cpp  SlideAnnotationCpuRecord.h
src/logic_old/camera/: Camera.cpp  Camera.h  CameraHelpers.cpp  CameraHelpers.h  CameraStartFrameType.h  CameraTypes.h  OrthogonalProjection.cpp  OrthogonalProjection.h  PerspectiveProjection.cpp  PerspectiveProjection.h  Projection.cpp  Projection.h
src/logic_old/colormap/: ImageColorMap.cpp  ImageColorMap.h  ParcellationLabelTable.cpp  ParcellationLabelTable.h
src/logic_old/data/: DataHelper.cpp  DataHelper.h  DataLoading.cpp  DataLoading.h  DataMemoryUse.cpp  DataMemoryUse.h
src/logic_old/interaction/: CameraInteractionHandler.cpp  CameraInteractionHandler.h  CrosshairsInteractionHandler.cpp  CrosshairsInteractionHandler.h  InteractionHandlerBase.cpp  InteractionHandlerBase.h  InteractionHandlerType.h  InteractionModes.h  InteractionPack.cpp  InteractionPack.h  RefImageInteractionHandler.cpp  RefImageInteractionHandler.h  SlideInteractionHandler.cpp  SlideInteractionHandler.h  StackInteractionHandler.cpp  StackInteractionHandler.h  WindowLevelInteractionHandler.cpp  WindowLevelInteractionHandler.h
src/logic_old/interfaces/: IGestureHandler.h  IInteractionHandler.h  IMouseEventHandler.h  ITabletEventHandler.h  IWheelEventHandler.h
src/logic_old/managers/: ActionManager.cpp  ActionManager.h  AssemblyManager.cpp  AssemblyManager.h  ConnectionManager.cpp  ConnectionManager.h  DataManager.cpp  DataManager.h  GuiManager.cpp  GuiManager.h  InteractionManager.cpp  InteractionManager.h  LayoutManager.cpp  LayoutManager.h  TransformationManager.cpp  TransformationManager.h
src/logic_old/records/: ImageColorMapRecord.h  ImageRecord.h  LabelTableRecord.h  LandmarkGroupRecord.h  MeshRecord.h  ParcellationRecord.h  SlideAnnotationRecord.h  SlideRecord.h
src/mesh/: MeshCpuRecord.cpp  MeshCpuRecord.h  MeshInfo.cpp  MeshInfo.hpp  MeshLoading.cpp  MeshLoading.h  MeshProperties.cpp  MeshProperties.h  MeshTypes.h
src/mesh/vtkdetails/: MeshGeneration.cpp  MeshGeneration.hpp
src/rendering/: ImageDrawing.cpp  ImageDrawing.h  RenderData.cpp  RenderData.h  Rendering.cpp  Rendering.h  TextureSetup.cpp  TextureSetup.h  VectorDrawing.cpp  VectorDrawing.h
src/rendering_old/: ShaderNames.cpp  ShaderNames.h
src/slideio/: SlideAssociatedImages.cpp  SlideAssociatedImages.h  SlideCpuRecord.cpp  SlideCpuRecord.h  SlideHeader.cpp  SlideHeader.h  SlideHelper.cpp  SlideHelper.h  SlideLevel.h  SlideProperties.cpp  SlideProperties.h  SlideReading.cpp  SlideReading.h  SlideTransformation.cpp  SlideTransformation.h
src/ui/: AsyncUiTasks.h  GuiData.cpp  GuiData.h  Headers.cpp  Headers.h  Helpers.cpp  Helpers.h  ImGuiCustomControls.cpp  ImGuiCustomControls.h  ImGuiWrapper.cpp  ImGuiWrapper.h  IsosurfaceHeader.cpp  IsosurfaceHeader.h  MainMenuBar.cpp  MainMenuBar.h  Popups.cpp  Popups.h  Style.cpp  Style.h  Toolbars.cpp  Toolbars.h  UiControls.h  Widgets.cpp  Widgets.h  Widgets.tpp  Windows.cpp  Windows.h  entropy_imgui_config.h
src/windowing/: ControlFrame.cpp  ControlFrame.h  GlfwCallbacks.cpp  GlfwCallbacks.h  GlfwWrapper.cpp  GlfwWrapper.h  Layout.cpp  Layout.h  View.cpp  View.h  ViewTypes.cpp  ViewTypes.h  WindowData.cpp  WindowData.h
(+186 files in other folders)
